@@ -1,7 +1,7 @@
 webkit needs to call nss to pull in nspr headers
 --- a/src/webkit/glue/webkit_glue.gypi
 +++ b/src/webkit/glue/webkit_glue.gypi
-@@ -422,6 +422,7 @@
+@@ -423,6 +423,7 @@
          ['OS=="linux" or OS=="freebsd" or OS=="openbsd" or OS=="solaris"', {
            'dependencies': [
              '<(DEPTH)/build/linux/system.gyp:gtk',
