@@ -1,8 +1,9 @@
 chromium-browser (9.0.597.19~r68937-1) UNRELEASED; urgency=low
 
   * New beta version
+  * Refreshed patches
 
- -- Giuseppe Iuculano <iuculano@debian.org>  Wed, 29 Dec 2010 08:19:05 +0100
+ -- Giuseppe Iuculano <iuculano@debian.org>  Wed, 29 Dec 2010 08:39:48 +0100
 
 chromium-browser (9.0.587.0~r66374-1) experimental; urgency=low
 
